--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 POM_GROUP_ID=com.sdklite.matrix
 POM_ARTIFACT_ID=matrix
 POM_PACKAGING=aar
-POM_VERSION=0.0.1-SNAPSHOT
+POM_VERSION=0.0.2
 
 POM_PROJECT_NAME=Matrix
 POM_PROJECT_DESCRIPTION=Matrix is a widget toolkit for Android
